# jam-G8

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  build.vc.cmd
jam_src/: Build.com  Jamfile  Makefile  buildstats.c  buildstats.h  changedPaths.c  changedPaths.h  execcmd.h  execdmc.c  expand.c  filemac.c  filent.c  filesys.h  fileunix.c  headers.c  jam.c  jam.h  jambase.c  jamfile  lists.c  make.c  make1.c  newstr.c  outFilter.c  outFilter.h  patchlevel.h  pathunix.c  regexp.c  rules.c  rules.h  scan.c  search.c  timestamp.c  variable.c  win32spawnl.c
prog/_jBuild/: .gitattributes  defPlatform.jam  defaults.jam  jBuild.jam  jCommonRules.jam
prog/_jBuild/_vc/: win_sdk.jam
prog/_jBuild/linux/: clang-cpp.jam  clang-sets.jam  gcc-cpp.jam  gcc-sets.jam
prog/_jBuild/linux64/: clang-cpp.jam  clang-link.jam  clang-sets.jam  gcc-cpp.jam  gcc-sets.jam  gcc4-cpp.jam  gcc4-link.jam  gcc4-sets.jam
prog/_jBuild/macOS/: .gitattributes  bundle.jam  clang-cpp.jam  clang-link.jam  clang-sets.jam
prog/_jBuild/macosx/: bundle.jam  clang64-cpp.jam  clang64-link.jam  clang64-sets.jam  setup-ver.jam
prog/_jBuild/win32/: clang-cpp.jam  clang-sets.jam  vc14-cpp.jam  vc14-sets.jam  vc16-cpp.jam  vc16-sets.jam
prog/_jBuild/win64/: clang-cpp.jam  clang-sets.jam  vc14-cpp.jam  vc14-sets.jam  vc16-cpp.jam  vc16-link.jam  vc16-sets.jam
prog/_jBuild/windows/: clang-cpp.jam  clang-sets.jam  vc14-cpp.jam  vc16-cpp.jam  vc16-link.jam  vc16-sets.jam
